feat: sistema de metas v1
